testsuite/tests/parser/should_compile/ListTuplePunsSuccess1.script
:set -XNoListTuplePuns
:load ListTuplePunsSuccess1
