testsuite/tests/parser/should_fail/ListTuplePunsFail2.script
:set -XNoListTuplePuns
:load ListTuplePunsFail2
